# tetris-rtos

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.org  cmake_install.cmake  compile_commands.json  cross.nix  gcc-arm-none-eabi.cmake
FreeRTOS/: FreeRTOSConfig.h
FreeRTOS/Source/: CMakeLists.txt  Makefile  cmake_install.cmake
FreeRTOS/Source/portable/: Makefile  cmake_install.cmake
core/inc/: stm32_def.h  stm32f1xx.h
core/src/: syscalls.c
documentation/: project-plan.md  report.md  test-plan.md
documentation/html/: BOARD__STATE__H_8h.html  BOARD__STATE__H_8h__dep__incl.dot  BOARD__STATE__H_8h__incl.dot  BOARD__STATE__H_8h_source.html  PIECE__STATE__I_8h.html  PIECE__STATE__I_8h__incl.dot  PIECE__STATE__I_8h_source.html  PIECE__STATE__J_8h.html  PIECE__STATE__J_8h__incl.dot  PIECE__STATE__J_8h_source.html  PIECE__STATE__L_8h.html  PIECE__STATE__L_8h__incl.dot  PIECE__STATE__L_8h_source.html  PIECE__STATE__O_8h.html  PIECE__STATE__O_8h__incl.dot  PIECE__STATE__O_8h_source.html  PIECE__STATE__S_8h.html  PIECE__STATE__S_8h__incl.dot  PIECE__STATE__S_8h_source.html  PIECE__STATE__T_8h.html  PIECE__STATE__T_8h__incl.dot  PIECE__STATE__T_8h_source.html  PIECE__STATE__Z_8h.html  PIECE__STATE__Z_8h__incl.dot  PIECE__STATE__Z_8h_source.html  TETRIS__ENUMS_8h.html  TETRIS__ENUMS_8h__dep__incl.dot  TETRIS__ENUMS_8h__incl.dot  TETRIS__ENUMS_8h_source.html  TETRIS__GAME__STATE_8h.html  TETRIS__GAME__STATE_8h__dep__incl.dot  TETRIS__GAME__STATE_8h__incl.dot  TETRIS__GAME__STATE_8h_source.html  TETROMINOS_8h_source.html  annotated.html  board_8h.html  board_8h__dep__incl.dot  board_8h__incl.dot  board_8h_source.html  classes.html  (+70 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+38 more)
documentation/latex/: BOARD__STATE__H_8h.tex  BOARD__STATE__H_8h.tex.tmp  BOARD__STATE__H_8h__dep__incl.dot  BOARD__STATE__H_8h__incl.dot  PIECE__STATE__I_8h.tex  PIECE__STATE__I_8h__incl.dot  PIECE__STATE__J_8h.tex  PIECE__STATE__J_8h__incl.dot  PIECE__STATE__L_8h.tex  PIECE__STATE__L_8h__incl.dot  PIECE__STATE__O_8h.tex  PIECE__STATE__O_8h__incl.dot  PIECE__STATE__S_8h.tex  PIECE__STATE__S_8h__incl.dot  PIECE__STATE__T_8h.tex  PIECE__STATE__T_8h__incl.dot  PIECE__STATE__Z_8h.tex  PIECE__STATE__Z_8h__incl.dot  TETRIS__ENUMS_8h.tex  TETRIS__ENUMS_8h__dep__incl.dot  TETRIS__ENUMS_8h__incl.dot  TETRIS__GAME__STATE_8h.tex  TETRIS__GAME__STATE_8h__dep__incl.dot  TETRIS__GAME__STATE_8h__incl.dot  annotated.tex  board_8h.tex  board_8h__dep__incl.dot  board_8h__incl.dot  cli_8h.tex  cli_8h__incl.dot  files.tex  holdPiece_8h.tex  holdPiece_8h__incl.dot  md_README.tex  piece_8h.tex  piece_8h__incl.dot  refman.tex  srs_8h.tex  srs_8h__incl.dot  structCurrentPiece.tex  (+15 more)
lib/cli/: cli.cpp  cli.h  version.h
lib/com-14646/: com_14646_matrix.cpp  com_14646_matrix.h  gpio.cpp  gpio.h  tim2.cpp  tim2.h
lib/tetris/: BOARD_STATE_H.h  PIECE_STATE_I.h  PIECE_STATE_J.h  PIECE_STATE_L.h  PIECE_STATE_O.h  PIECE_STATE_S.h  PIECE_STATE_T.h  PIECE_STATE_Z.h  TETRIS_ENUMS.h  TETRIS_GAME_STATE.cpp  TETRIS_GAME_STATE.h  TETROMINOS.cpp  TETROMINOS.h  board.cpp  board.h  holdPiece.cpp  holdPiece.h  piece.cpp  piece.h  queue.cpp  queue.h  srs.cpp  srs.h  tetris_queue.cpp  tetris_queue.h
lib/usart/: usart_STM32.cpp  usart_STM32.h
lib/utils/: main.h  util_STM32.cpp  util_STM32.h
lib/ws2821/: dma.cpp  dma.h  gpio.cpp  gpio.h  tim2.cpp  tim2.h  ws2821_display.cpp  ws2821_display.h
openocd/: ocd_stlv2_stm32f1.cfg
src/: main.cpp
terminal/: terminal.py
